noinst_LIBRARIES = libmicrosim.a

libmicrosim_a_SOURCES = MSBitSetLogic.h \
MSBaseVehicle.cpp MSBaseVehicle.h \
MSCModel_NonInteracting.h MSCModel_NonInteracting.cpp \
MSContainer.cpp MSContainer.h \
MSEdge.cpp MSEdge.h MSEdgeControl.cpp MSEdgeControl.h \
MSEdgeWeightsStorage.cpp MSEdgeWeightsStorage.h \
MSEventControl.cpp MSEventControl.h \
MSFrame.cpp MSFrame.h MSGlobals.cpp MSGlobals.h \
MSInsertionControl.cpp MSInsertionControl.h \
MSInternalJunction.cpp MSInternalJunction.h \
MSJunction.cpp MSJunction.h \
MSJunctionControl.cpp MSJunctionControl.h \
MSJunctionLogic.cpp MSJunctionLogic.h MSLane.cpp MSLane.h \
MSLaneChanger.cpp MSLaneChanger.h \
MSLaneChangerSublane.cpp MSLaneChangerSublane.h \
MSLink.cpp MSLink.h MSLinkCont.cpp MSLinkCont.h \
MSLogicJunction.cpp MSLogicJunction.h MSMoveReminder.cpp MSMoveReminder.h \
MSNet.cpp MSNet.h MSNoLogicJunction.cpp MSNoLogicJunction.h \
MSRightOfWayJunction.cpp MSRightOfWayJunction.h \
MSRoute.cpp MSRoute.h MSRouteHandler.cpp MSRouteHandler.h \
MSStoppingPlace.cpp MSStoppingPlace.h \
MSParkingArea.cpp MSParkingArea.h \
MSVehicle.cpp MSVehicle.h \
MSLeaderInfo.cpp MSLeaderInfo.h \
MSVehicleContainer.cpp MSVehicleContainer.h \
MSVehicleControl.cpp MSVehicleControl.h \
MSVehicleTransfer.cpp MSVehicleTransfer.h \
MSVehicleType.cpp MSVehicleType.h \
MSStateHandler.h MSStateHandler.cpp \
MSTransportable.h MSTransportable.cpp \
MSTransportableControl.h MSTransportableControl.cpp

SUBDIRS = actions cfmodels devices lcmodels logging output pedestrians \
traffic_lights trigger
