noinst_LIBRARIES = libnetwrite.a

libnetwrite_a_SOURCES = NWFrame.cpp NWFrame.h \
NWWriter_Amitran.cpp NWWriter_Amitran.h \
NWWriter_MATSim.cpp NWWriter_MATSim.h \
NWWriter_OpenDrive.cpp NWWriter_OpenDrive.h \
NWWriter_DlrNavteq.cpp NWWriter_DlrNavteq.h \
NWWriter_SUMO.cpp NWWriter_SUMO.h \
NWWriter_XML.cpp NWWriter_XML.h


