add_subdirectory(common)
add_subdirectory(distribution)
add_subdirectory(emissions)
add_subdirectory(geom)
add_subdirectory(importio)
add_subdirectory(iodevices)
add_subdirectory(options)
add_subdirectory(shapes)
add_subdirectory(traci)
add_subdirectory(vehicle)
add_subdirectory(xml)
if (FOX_FOUND)
    add_subdirectory(foxtools)
    add_subdirectory(gui)
endif ()

if (SUMO_UTILS)
    add_library(sumoutils SHARED)
    if (MSVC OR APPLE)
        target_link_libraries(sumoutils ${commonlibs})
    else()
        target_link_libraries(sumoutils -Wl,--whole-archive ${commonlibs} -Wl,--no-whole-archive)
    endif()
endif()
