EXTRA_DIST = sumo_dev_common.xml \
sumo_dev_netconvert.xml \
sumo_dev_sumo.xml \
sumo_dev_wrapper.xml \
sumo_qa.xml \
sumo_user.xml \
sumo-glossary.deu.sgml \
sumo-glossary.eng.sgml \
sumo-netconvert-devdocs.sgml \
sumo-netconvert-userdocs.sgml \
sumo-userdocs.sgml

SUBDIRS = gfx gfx_netcdev images
